--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,101 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.link-style {
+  @apply font-semibold uppercase;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.home {
+  background-image: url("https://preview.colorlib.com/theme/agenda/images/header-bg.jpg");
+  background-size: cover;
+  height: 100vh;
+}
+.event {
+  background-image: url("https://preview.colorlib.com/theme/agenda/images/regional-events-bg.jpg");
+  background-size: cover;
+}
+.event-cat {
+  @apply px-5 py-2 rounded-md space-y-5;
+}
+.partners {
+  background: url("https://preview.colorlib.com/theme/agenda/images/next-events-header-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.subscribe-wrap {
+  background-image: url("https://preview.colorlib.com/theme/agenda/images/newsletter-bg.jpg");
+  background-size: cover;
+  background-position: left;
+  background-repeat: no-repeat;
+}
+
+.feedback-bg {
+  background-image: url("/bg-office-table.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+input[type="radio"] {
+  display: none;
+}
+.star {
+  cursor: pointer;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  background-color: #9a28d7;
+  border: 2px solid white;
+  width: 42px !important;
+  height: 42px !important;
+  border-radius: 50%;
+  font-size: 20px;
+}
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  color: white;
+  font-size: 16px !important;
+  font-weight: 700;
+}
+.table-tr > th {
+  background-color: #581479;
+  color: white;
+  text-align: left;
+}
+table td,
+table th {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+td {
+  height: 50px;
+  vertical-align: middle;
 }
